@@ -1,3 +1,9 @@
+2002-08-26  Tor Lillqvist  <tml@iki.fi>
+
+	* gdk/win32/gdkwindow-win32.c (RegisterGdkClass): Use MAX_PATH
+	(from windef.h) insted of _MAX_PATH (from stdlib.h in mingw and
+	MSVC, but not there in Cygwin) (#91681, Masahiro Sakai).
+
 Mon Aug 26 12:21:16 BST 2002  Tony Gale <gale@gtk.org>
 
 	* docs/tutorial/package-db-tutorial.sh: cleanups
